--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puesto/puesto.widget.html
@@ -197,7 +197,7 @@
                                         <label class="form-check-label">
                                             Dias festivos
                                             <input class="form-check-input" type="checkbox" [value]="model.diaFestivo" [(ngModel)]="model.diaFestivo" id="btnFestivoPuesto" />
-                                            <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="El calculo es basado en 7 dias">
+                                            <span class="input-group-addon" data-toggle="tooltip" data-placement="top" title="El calculo está basado en 8 dias">
                                                 <i class="fa fa-info-circle"></i>
                                             </span>
                                         </label><br />
